--- a/orchestrator/Cargo.toml
+++ b/orchestrator/Cargo.toml
@@ -13,6 +13,7 @@ tower-http = { version = "0.5", features = ["cors", "fs"] }
 # Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 
 # Config
 config = "0.14"
