--- a/orchestrator/Cargo.toml
+++ b/orchestrator/Cargo.toml
@@ -30,6 +30,7 @@ thiserror = "1"
 # Utils
 uuid = { version = "1", features = ["v4", "serde"] }
 async-trait = "0.1"
+reqwest = { version = "0.11", features = ["json"] }
 
 # Process management
 sysinfo = "0.30"
