feat: switch to Containment runtime, add Kimi and z.ai providers
- Replace Docker with Containment runtime client
- Add Kimi (Moonshot AI) and z.ai as LLM providers
- Add templates for kimi and zai agents
- Remove bollard/Docker dependencies
- Runtime abstraction via ContainerRuntime trait

--- a/templates/agents.yaml
+++ b/templates/agents.yaml
@@ -63,3 +63,25 @@ templates:
       cpu_cores: 1.5
     env:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+
+  kimi:
+    name: "Kimi (Moonshot AI)"
+    description: "Long-context Chinese/English assistant"
+    config:
+      llm_provider: kimi
+      llm_model: moonshot-v1-128k
+      memory_mb: 2048
+      cpu_cores: 1.0
+    env:
+      KIMI_API_KEY: ${KIMI_API_KEY}
+
+  zai:
+    name: "z.ai"
+    description: "z.ai powered assistant"
+    config:
+      llm_provider: zai
+      llm_model: ""
+      memory_mb: 1024
+      cpu_cores: 1.0
+    env:
+      ZAI_API_KEY: ${ZAI_API_KEY}
