fix: orchestrator routes, add chat websocket, improve tauri app
- Fix route parameter syntax ({id} -> :id) for Axum 0.7
- Reorder routes so specific paths come before generic :id
- Add chat websocket endpoint for agent communication
- Add chat panel component to Yew UI (WIP)
- Update Tauri app with encrypted API key storage
- Improve .gitignore for agent logs/runtime data

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 *.wasm
 node_modules/
 dist/
+
+# Agent logs and runtime data
+agents/*/logs/
+agents/*/memory/
+agents/*/notifications/
+*.log
+*.json.bak
