--- a/orchestrator/Cargo.toml
+++ b/orchestrator/Cargo.toml
@@ -10,6 +10,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "fs"] }
+futures-util = "0.3"
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
