--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -11,7 +11,9 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-gloo-net = { version = "0.5", features = ["http"] }
+gloo-net = { version = "0.5", features = ["http", "websocket"] }
 web-sys = { version = "0.3", features = ["console"] }
 wasm-logger = "0.2"
+js-sys = "0.3"
+futures = "0.3"
 
