feat: core selection, RAM config, secrets management, and improved container handling
- Add CPU core selection when creating agents
- Add RAM configuration options
- Add secrets.rs for secure credential management
- Improve container creation and lifecycle handling
- Update docs with Exo runtime option and deployment guide

--- a/claw-pen.example.toml
+++ b/claw-pen.example.toml
@@ -13,6 +13,15 @@ network-backend = "tailscale"
 # Container runtime socket path
 runtime-socket = "/var/run/claw-pen.sock"
 
+# Container runtime: "docker" (default) or "exo"
+# Docker is the default for backward compatibility
+# Exo is an agent-first container runtime designed for AI agents
+container-runtime = "docker"
+
+# Custom path to exo binary (optional, defaults to "exo" in PATH)
+# Only used when container-runtime = "exo"
+# exo-path = "/usr/local/bin/exo"
+
 # Tailscale auth key (optional, for auto-joining agents to tailnet)
 # tailscale-auth-key = "tskey-auth-xxxxx"
 
